# qstrat

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
projects/: ab_test.py  alpha_to_portfolio.py  portfolio_diagnostics.py  signal_lab_mom.py  signal_lab_mr.py
projects/alpha_run/: __init__.py  ab_workflow.py  config.py  data.py  report.py  runner.py
src/: diagnostics.py  features.py  metrics.py  optimizer.py  plots.py  risk_models.py  signals.py  utils.py
src/backtest/: __init__.py  alpha_features.py  alpha_models_ml.py  alpha_models_rules.py  constraints.py  cooldown.py  engine.py  helpers.py  risk_cov.py
src/data/: prices.py  sectors.py
