[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qstrat"
version = "0.1.0"
description = "Cross-sectional equity research pipeline: signals → portfolio → diagnostics"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Carl Emil Aae Eskildsen" }]

# NOTE: no 'ecos' here (Windows build pain). We rely on OSQP/SCS/Clarabel.
dependencies = [
  "pandas",
  "numpy",
  "scipy",
  "matplotlib",
  "cvxpy",
  "osqp",
  "scs",
  "clarabel",
  "scikit-learn",
  "yfinance",
  "tqdm"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
